--- a/homework.html
+++ b/homework.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <!-- Include code for favicon image, three stylesheets, Google Font, and responsive meta tags. -->
+    <link rel = "stylehsheet" href = "css/starter.css">
+    <link rel = "stylesheet" href = "css/html5reset.css">
+    <link rel = "stylesheet" href = "css/style.css" >
+    <link rel = "shortcut icon" type = "images/png" href = "images/logo_icon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" >
+
+
     <title>Super Slick Co.</title>
   </head>
   <body>
