--- a/homework.html
+++ b/homework.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <!-- Include code for favicon image, three stylesheets, Google Font, and responsive meta tags. -->
+    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+    <!-- Include code for favicon image, three stylesheets, Google Font, and responsive meta tags.-->
     <link rel = "stylehsheet" href = "css/starter.css">
     <link rel = "stylesheet" href = "css/html5reset.css">
     <link rel = "stylesheet" href = "css/style.css" >
-    <link rel = "shortcut icon" type = "images/png" href = "images/logo_icon.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" >
+    <link rel = "shortcut icon" type = "image/png" href = "images/logo_icon.png">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway"  rel="stylesheet">
 
 
     <title>Super Slick Co.</title>
