--- a/homework.html
+++ b/homework.html
@@ -9,7 +9,7 @@
     <link rel = "stylesheet" href = "css/style.css" >
     <link rel = "shortcut icon" type = "image/png" href = "images/logo_icon.png">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway"  rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" >
 
 
     <title>Super Slick Co.</title>
@@ -20,9 +20,9 @@
       <img src="images/logo.png" alt="logo" id = "logo">
       <nav>
         <ul class="nav_links">
-          <li class="nav_item"><a href="">About</a></li>
-          <li class="nav_item"><a href="">Pricing</a></li>
-          <li class="nav_item"><a href="#">Gallery</a></li>
+          <li class="nav_item"><a href="#main">About</a></li>
+          <li class="nav_item"><a href="#pricing">Pricing</a></li>
+          <li class="nav_item"><a href="#gallery">Gallery</a></li>
         </ul>
     </nav>
   </header>
