--- a/homework.html
+++ b/homework.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <!-- Include code for favicon image, three stylesheets, Google Font, and responsive meta tags.-->
-    <link rel = "stylehsheet" href = "css/starter.css">
     <link rel = "stylesheet" href = "css/html5reset.css">
+    <link rel = "stylehsheet" href = "css/starter.css">
     <link rel = "stylesheet" href = "css/style.css" >
     <link rel = "shortcut icon" type = "image/png" href = "images/logo_icon.png">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" >
 
 
     <title>Super Slick Co.</title>
   </head>
   <body>
-    <a class = "skip" href="">Skip to Main Content</a>
+    <a class = "skip" href="#main">Skip to Main Content</a>
     <header>
       <img src="images/logo.png" alt="logo" id = "logo">
       <nav>
